--- a/ClientWPF/MainWindow.xaml
+++ b/ClientWPF/MainWindow.xaml
@@ -7,8 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <DatePicker x:Name="datePicker" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" CalendarClosed="datePicker_CalendarClosed"/>
         <TextBox x:Name="txtBox" HorizontalAlignment="Left" Height="295" Margin="117,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="391"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="29,59,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <DatePicker x:Name="datePicker" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
